<resources>
  <string name="app_name">SignUpForm</string>

  <string name="ok">Ok</string>
  <string name="cancel">Cancel</string>
  <string name="submit">Submit</string>

  <string name="username_label">User Name:</string>
  <string name="username_hint">Please enter your username</string>

  <string name="password_label">Password:</string>
  <string name="password_hint">Please enter your password</string>

  <string name="confirm_label">Confirm:</string>
  <string name="confirm_hint">Please confirm your password</string>

  <string name="action_settings">Settings</string>
</resources>
