<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".LoginActivity">

  <LinearLayout
    android:id="@+id/login_form"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
      android:id="@+id/username_field"
      android:layout_height="wrap_content"
      android:layout_width="match_parent">

      <TextView
        android:id="@+id/username_label"
        android:text="@string/username_label"
        android:textSize="14sp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="25"/>

      <EditText
        android:id="@+id/username_input"
        android:hint="@string/username_hint"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="75"/>

    </LinearLayout>

    <LinearLayout
      android:id="@+id/password_field"
      android:layout_height="wrap_content"
      android:layout_width="match_parent">

      <TextView
        android:id="@+id/password_label"
        android:text="@string/password_label"
        android:textSize="14sp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="25"/>

      <EditText
        android:id="@+id/password_input"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="75"/>

    </LinearLayout>

    <LinearLayout
      android:id="@+id/confirm_field"
      android:layout_height="wrap_content"
      android:layout_width="match_parent">

      <TextView
        android:id="@+id/confirm_label"
        android:text="@string/confirm_label"
        android:textSize="14sp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="25"/>

      <EditText
        android:id="@+id/confirm_input"
        android:hint="@string/confirm_hint"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="75"/>

    </LinearLayout>

  </LinearLayout>

  <Button
    android:id="@+id/submit_button"
    android:text="@string/submit"
    android:textSize="18sp"
    android:layout_below="@id/login_form"
    android:layout_alignEnd="@id/login_form"
    android:layout_alignRight="@id/login_form"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

</RelativeLayout>
